--- a/frontend/style.css
+++ b/frontend/style.css
@@ -11,7 +11,7 @@ body {
 h1 {
   margin-top: 20px;
   font-size: 3rem;
-  text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
+  text-shadow: 2px 2px 8px rgba(6, 5, 5, 0.5);
 }
 
 #score {
